# vault

./: Cargo.toml  README.md
android/app/: build.gradle
android/app/release/: output-metadata.json
android/app/src/androidTest/java/pub/trait/vault/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pub/trait/vault/: JsBridge.java  MainActivity.java  Vault.java
android/app/src/main/res/values/: colors.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/pub/trait/vault/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
html/: package.json  vue.config.js
html/public/: index.html
html/src/: App.vue  main.js
html/src/components/: ConfirmDialog.vue  ImportPasswordDialog.vue
html/src/lib/: controller.js  rpc.d.ts  rpc.js
html/src/lib/util/: browser.js  compat.js  jsonrpc_client.js  webview.js
html/src/router/: index.js
html/src/views/: About.vue  Add.vue  ChangePassword.vue  Home.vue  NetworkAccess.vue  Setup.vue  Unlock.vue
src/: android.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  server.rs  service.rs  vault.pfx
